@@ -4,6 +4,7 @@ import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -15,7 +16,7 @@ public class UserServiceJwt {
     private final List<User> users;
 
     public UserServiceJwt() {
-        this.users = List.of(
+        this.users = Arrays.asList(
                 new User("SviridenkoUser", "1234", Collections.singleton(Role.USER)),
                 new User("MorozovUser", "1234", Collections.singleton(Role.USER)),
                 new User("SviridenkoAdmin", "12345", Collections.singleton(Role.ADMIN)),
